--- a/wear/src/main/AndroidManifest.xml
+++ b/wear/src/main/AndroidManifest.xml
@@ -4,20 +4,33 @@
 
     <uses-feature android:name="android.hardware.type.watch" />
 
+    <uses-permission android:name="com.google.android.permission.PROVIDE_BACKGROUND" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.DeviceDefault" >
-        <activity
-            android:name=".MainActivity"
-            android:label="@string/app_name" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+       <service android:name=".WeatherWatchFaceService"
+                android:label="Weather"
+                android:allowEmbedded="true"
+                android:permission="android.permission.BIND_WALLPAPER">
+           <meta-data
+               android:name="android.service.wallpaper"
+               android:resource="@xml/watch_face"/>
+           <meta-data
+               android:name="com.google.android.wearable.watchface.preview"
+               android:resource="@drawable/preview"/>
+           <meta-data
+               android:name="com.google.android.wearable.watchface.preview_circular"
+               android:resource="@drawable/preview_circular"/>
+           <intent-filter>
+               <action android:name="android.service.wallpaper.WallpaperService"/>
+               <category android:name="com.google.android.wearable.watchface.category.WATCH_FACE"/>
+           </intent-filter>
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+       </service>
     </application>
 
 </manifest>
